# raylib-game-cpp

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  eastward-style-camera-implementation.md  movement-jitter-notes.md  project.md
assets/: Map.tmx  glass.aseprite  glass.tsx  land_grass_dry_C.tsx  land_grass_green_C.tsx  object.tsx  精灵-0002.tsx
assets/Tiles/: 15piece.aseprite  15piece.tsx  edge.aseprite  edge.tsx  glass.aseprite  glass.tsx  tilemaps.aseprite  tilemaps.tsx  water.aseprite  water.tsx  精灵-0002.aseprite
src/: main.cpp
src/modules/: Assets.h  Camera.cpp  Camera.h  Character.cpp  MapManage.cpp  MapManage.h  Movement.cpp  Movement.h  Physics.cpp  Physics.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  Reflection.h  Rendering.cpp  Rendering.h  Simulation.h  Tilemap.cpp  Tilemap.h  Utils.h
src/modules/Character/: Character.cpp  Character.h  CharacterAnimation.cpp  CharacterCore.cpp  CharacterInternal.h  CharacterPhysics.cpp  CharacterRendering.cpp  CharacterSprites.cpp
src/modules/Console/: Console.cpp  Console.h  ConsoleInternal.h  ConsoleUI.cpp  Register.cpp  Register.h
src/modules/Debug/: DebugDraw.cpp  DebugDraw.h  FrameStepper.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  Screenshot.cpp  Screenshot.h
src/modules/Map/: Map.cpp  Map.h  MapCache.cpp  MapInternal.h  MapLoader.cpp  MapRendering.cpp
src/modules/Runtime/: Runtime.cpp  Runtime.h  RuntimeInternal.h  RuntimePhases.h  RuntimeRaylib.cpp
src/modules/Stairs/: Stairs.cpp  Stairs.h
src/modules/Tilemap/: Tilemap.cpp  Tilemap.h  TilemapChunks.cpp  TilemapCollision.cpp  TilemapCollison.cpp  TilemapInternal.h  TilemapPhysics.cpp  TilemapTextures.cpp
